--- a/_sass/_core.scss
+++ b/_sass/_core.scss
@@ -34,11 +34,12 @@ $se-dark-grey-85: rgba(41,39,40,.85);
 
 // -------- breakpoints --------
 
-$xxlarge: 970px;
-$xlarge:  850px;
-$large:   650px;
-$medium:  450px;
-$small:   300px;
+$xxxlarge:  1120px;
+$xxlarge:   970px;
+$xlarge:    850px;
+$large:     650px;
+$medium:    450px;
+$small:     300px;
 
 @mixin bp($width){
   @if $width == xxlarge {
@@ -161,3 +162,14 @@ $z-background:      -1;
 .bg-image-ratio--3-2:before   { padding-top: 66.666666666667%; }
 .bg-image-ratio--16-9:before  { padding-top: 56.25%; }
 .bg-image-ratio--21-9:before  { padding-top: 42.8571429%; }
+
+
+// -------- generic styles --------
+
+// standard bg position, repeat, etc
+@mixin background-attributes {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-size: cover;
+}
