--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,7 @@
 ---
 
 @import
-  'reset',
+  '../bower_components/reset-css/_reset',
   '../bower_components/susy/sass/susy',
   'core',
   'typography',
