--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,21 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>{% if page.title %}{{ page.title }} | {{ site.title}}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 155 }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="description" content="{% if page.meta-description %}{{ page.meta-description | strip_html | strip_newlines | truncate: 155 }}{% else %}{{ site.description }}{% endif %}">
 
   <!-- START Social Data -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="{% if page.title %}{{ page.title }} | {{ site.title}}{% else %}{{ site.title }}{% endif %}">
   <meta property="og:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
-  <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-  <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}/img/social/overview.jpg">
+  <meta property="og:description" content="{% if page.meta-description %}{{ page.meta-description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}/img/social/social.jpg">
   <meta name="twitter:card" value="summary_large_image">
   <meta name="twitter:site" content="@secret_escapes">
   <meta name="twitter:title" content="{{ page.title }} | {{ site.title}}">
   <meta name="twitter:description" content="{{ site.description }}">
-  <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}/img/social/overview.jpg">
+  <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}/img/social/social.jpg">
   <!-- END Social Data -->
 
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700italic,700,600italic,600,400italic,300italic,300" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
   <script src="{{ site.baseurl }}/js/scripts.min.js"></script>
