--- a/_sass/_core.scss
+++ b/_sass/_core.scss
@@ -42,6 +42,9 @@ $medium:    450px;
 $small:     300px;
 
 @mixin bp($width){
+  @if $width == xxxlarge {
+    @media (min-width:$xxxlarge) {@content;}
+  }
   @if $width == xxlarge {
     @media (min-width:$xxlarge) {@content;}
   }
@@ -74,7 +77,9 @@ $small:     300px;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
+     -moz-font-smoothing: antialiased;
           font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
 }
 
