--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,32 +1,71 @@
 <header class="site-header">
-  <div class="row row--padding">
 
-    <div class="mobile-icon mobile-icon__menu js-mobile-menu-open row--margin"></div>
+  <!-- CORE NAV -->
+  <div class="core-nav">
+    <div class="row row--padding">
+      <div class="core-nav__wrap">
 
-    <a href="https://www.secretescapes.com/"><img class="site-header__logo site-header__logo--secret-escapes js-svg-swap" src="{{ site.baseurl }}/img/logo/secret-escapes.png" alt="Secret Escapes logo"></a>
-    {% include partner-logo.html %}
+        <div class="core-nav__column core-nav__column--left">
+          <div class="js-toggle-mobile-nav icon icon--menu row"></div>
+        </div>
 
-    <nav class="site-header__nav mobile-menu">
-      <div class="site-header__nav-item mobile-icon mobile-icon__close js-mobile-menu-close"></div>
-      <ul class="site-header__nav-list">
-        <li class="site-header__nav-item"><a class="site-header__nav-link" href="https://www.secretescapes.com/current-sales">Current Sales</a></li>
-        <li class="site-header__nav-item"><a class="site-header__nav-link" href="https://www.secretescapes.com/smartstays/filter">Smart Stays</a></li>
-        <li class="site-header__nav-item"><a class="site-header__nav-link" href="https://www.secretescapes.com/spa">Spa</a></li>
-        <li class="site-header__nav-item"><a class="site-header__nav-link" href="https://www.secretescapes.com/vouchers-offer">Gift Vouchers</a></li>
-        <li class="site-header__nav-item"><a class="site-header__nav-link site-header__nav-link--current" href="{{ site.baseurl }}">{{ site.title }}</a></li>
+        <!-- NAV & SE LOGO -->
+        <div class="core-nav__column core-nav__column--center">
+          <a class="logo logo--secret-escapes" href="https://www.secretescapes.com/"><img class="js-svg-swap" src="{{ site.baseurl }}/img/logo/secret-escapes.png" alt="Secret Escapes logo"></a>
+          <span class="core-nav__divider"></span>
+          <!-- CORE NAV LIST -->
+          <ul class="core-nav__list">
+            {% include site-navigation.html block="core-nav" %}
+          </ul>
+        </div>
+
+        <!-- PARTNER LOGO -->
+        <div class="core-nav__column core-nav__column--right">
+          {% include partner-logo.html %}
+        </div>
+
+      </div><!-- END - .core-nav__wrap -->
+    </div><!-- END - .row -->
+  </div><!-- END - .core-nav -->
+
+  <!-- SITE NAV -->
+  <div class="site-nav">
+    <div class="row">
+      <ul class="site-nav__list">
+        {% assign nav-order = site.pages | sort:"nav-order" %}
+        {% for page in nav-order %}{% if page.title %}<li class="site-nav__item site-nav__item--{{ page.class }}"><a class="site-nav__link" href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></li>{% endif %}{% endfor %}{% for page in nav-order %}{% if page.title %}<li class="site-nav__item site-nav__item--{{ page.class }}"><a class="site-nav__link" href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></li>{% endif %}{% endfor %}{% for page in nav-order %}{% if page.title %}<li class="site-nav__item site-nav__item--{{ page.class }}"><a class="site-nav__link" href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></li>{% endif %}{% endfor %}
       </ul>
-      <div class="mobile-menu__logo">
-        {% include partner-logo.html %}
-      </div>
-    </nav>
+    </div><!-- END - .row -->
+  </div><!-- END - .site-nav -->
 
-  </div>
 </header>
 
-<div class="row">
-  <div class="microsite-nav">
-    <ul class="microsite-nav__list">
-      {% assign nav-order = site.pages | sort:"nav-order" %}{% for page in nav-order %}{% if page.title %}<li class="microsite-nav__item microsite-nav__item--{{ page.class }}"><a class="microsite-nav__link" href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></li>{% endif %}{% endfor %}
-    </ul>
+
+<!-- MOBILE NAV -->
+<div class="mobile-nav is-closed">
+  <div class="mobile-nav__wrap">
+
+    <!-- CLOSE ICON -->
+    <!-- Same core nav block used to mirror icon position -->
+    <div class="row row--padding">
+      <div class="core-nav__wrap">
+        <div class="core-nav__column core-nav__column--left">
+          <div class="js-toggle-mobile-nav icon icon--close"></div>
+        </div>
+      </div>
+    </div>
+
+    <!-- NAV LIST -->
+    <div class="row--padding">
+      <ul class="mobile-nav__list">
+        {% include site-navigation.html block="mobile-nav" %}
+      </ul>
+    </div>
+
+    <!-- PARTNER LOGO -->
+    <div class="mobile-nav__bottom">
+      {% include partner-logo.html %}
+    </div>
+
   </div>
 </div>
