--- a/_includes/partner-logo.html
+++ b/_includes/partner-logo.html
@@ -1,1 +1,1 @@
-<a href="#"><img class="site-header__logo--partner js-svg-swap" src="{{ site.baseurl }}/img/logo/partner.png" alt="Partner Logo"></a>
+<a href="#"><img class="logo logo--partner js-svg-swap" src="{{ site.baseurl }}/img/logo/partner.png" alt="Partner Logo"></a>
