--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
     <div class="row">
       <ul class="site-nav__list">
         {% assign nav-order = site.pages | sort:"nav-order" %}
-        {% for page in nav-order %}{% if page.title %}<li class="site-nav__item site-nav__item--{{ page.class }}"><a class="site-nav__link" href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></li>{% endif %}{% endfor %}{% for page in nav-order %}{% if page.title %}<li class="site-nav__item site-nav__item--{{ page.class }}"><a class="site-nav__link" href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></li>{% endif %}{% endfor %}{% for page in nav-order %}{% if page.title %}<li class="site-nav__item site-nav__item--{{ page.class }}"><a class="site-nav__link" href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></li>{% endif %}{% endfor %}
+        {% for page in nav-order %}{% if page.title %}<li class="site-nav__item site-nav__item--{{ page.class }}"><a class="site-nav__link" href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></li>{% endif %}{% endfor %}
       </ul>
     </div><!-- END - .row -->
   </div><!-- END - .site-nav -->
