--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>{% if page.title %}{{ page.title }} | {{ site.title}}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.meta-description %}{{ page.meta-description | strip_html | strip_newlines | truncate: 155 }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="description" content="{% if page.intro %}{{ page.intro | strip_html | strip_newlines | truncate: 155 }}{% else %}{{ site.description }}{% endif %}">
 
   <!-- START Social Data -->
   <meta property="og:type" content="website">
