--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
-  <div class="row">
-    © Copyright <span class="js-year">2016</span> Secret Escapes
+  <div class="row row--padding">
+    {% include site-navigation.html block="footer-nav" %}
   </div>
 </footer>
