--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
           <span class="core-nav__divider"></span>
           <!-- CORE NAV LIST -->
           <ul class="core-nav__list">
-            {% include site-navigation.html block="core-nav" %}
+            {% include core-navigation.html block="core-nav" %}
           </ul>
         </div>
 
@@ -32,8 +32,7 @@
   <div class="site-nav">
     <div class="row">
       <ul class="site-nav__list">
-        {% assign nav-order = site.pages | sort:"nav-order" %}
-        {% for page in nav-order %}{% if page.title %}<li class="site-nav__item site-nav__item--{{ page.class }}"><a class="site-nav__link" href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></li>{% endif %}{% endfor %}
+        {% include site-navigation.html block="site-nav" %}
       </ul>
     </div><!-- END - .row -->
   </div><!-- END - .site-nav -->
@@ -58,7 +57,7 @@
     <!-- NAV LIST -->
     <div class="row--padding">
       <ul class="mobile-nav__list">
-        {% include site-navigation.html block="mobile-nav" %}
+        {% include core-navigation.html block="mobile-nav" %}
       </ul>
     </div>
 
