--- a/_includes/site-navigation.html
+++ b/_includes/site-navigation.html
@@ -1,4 +1,2 @@
-<li class="{{include.block}}__item"><a class="{{include.block}}__link" href="https://www.secretescapes.com/current-sales">Current Sales</a></li>
-<li class="{{include.block}}__item"><a class="{{include.block}}__link" href="https://www.secretescapes.com/smartstays/filter">Smart Stays</a></li>
-<li class="{{include.block}}__item"><a class="{{include.block}}__link" href="https://www.secretescapes.com/spa">Spa</a></li>
-<li class="{{include.block}}__item"><a class="{{include.block}}__link {{include.block}}__link--current" href="{{ site.baseurl }}">{{ site.title }}</a></li>
+{% assign nav-order = site.pages | sort:"nav-order" %}
+{% for page in nav-order %}{% if page.title %}<li class="{{include.block}}__item"><a class="{{include.block}}__link {{include.block}}__link--{{ page.class }}" href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></li>{% endif %}{% endfor %}
