--- a/_sass/_core.scss
+++ b/_sass/_core.scss
@@ -14,13 +14,14 @@ $white-5:     rgba(255,255,255,.5);
 $white-66:    rgba(255,255,255,.66);
 $white-75:    rgba(255,255,255,.75);
 $white-85:    rgba(255,255,255,.85);
+$white-9:     rgba(255,255,255,.9);
 $black-25:    rgba(0,0,0,.25);
 $black-33:    rgba(0,0,0,.33);
 $black-5:     rgba(0,0,0,.5);
 $black-66:    rgba(0,0,0,.66);
 $black-75:    rgba(0,0,0,.75);
 $black-85:    rgba(0,0,0,.85);
-$text-black:  #0d0d0d;
+$text-black:  #292929;
 
 $se-orange:       #ff8c00;
 $se-orange-20:    rgba(255,140,0,.20);
@@ -31,7 +32,17 @@ $se-dark-grey:    #292728;
 $se-dark-grey-33: rgba(41,39,40,.33);
 $se-dark-grey-5:  rgba(41,39,40,.5);
 $se-dark-grey-66: rgba(41,39,40,.66);
+$se-dark-grey-75: rgba(41,39,40,.75);
 $se-dark-grey-85: rgba(41,39,40,.85);
+
+$sa-yellow:   #ffcc00;
+$sa-yellow-5: rgba(255,204,0,.5);
+$sa-green:    #008c3a;
+$sa-green-5:  rgba(0,140,58,.5);
+$sa-red:      #e3000f;
+$sa-red-5:    #e3000f;
+$sa-blue:   #396ac6;
+$sa-blue:   #396ac6;
 
 
 // -------- breakpoints --------
