--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,10 @@
 
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700italic,700,600italic,600,400italic,300italic,300" rel="stylesheet" type="text/css">
+
+  <script src="https://use.typekit.net/jpi1ztv.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
+
   <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
   <script src="{{ site.baseurl }}/js/scripts.min.js"></script>
 
