--- a/_includes/partner-logo.html
+++ b/_includes/partner-logo.html
@@ -1,1 +1,1 @@
-<a href="#"><img class="logo logo--partner js-svg-swap" src="{{ site.baseurl }}/img/logo/partner.png" alt="Partner Logo"></a>
+<a class="logo logo--partner" href="#"><img class="js-svg-swap" src="{{ site.baseurl }}/img/logo/south-africa.png" alt="South Africa Logo"></a>
