--- a/_sass/_offers.scss
+++ b/_sass/_offers.scss
@@ -49,12 +49,12 @@
       margin-right: .482em;
       margin-bottom: .1em;
       vertical-align: bottom;
-      background-image: url( "../img/icon/map-pin.png" );
+      background-image: url( "../img/icons/map-pin.png" );
       background-position: center;
       background-repeat: no-repeat;
       background-size: 100%;
       background-size: contain;
-      .svg & { background-image: url( "../img/icon/map-pin.svg" ); }
+      .svg & { background-image: url( "../img/icons/map-pin.svg" ); }
     }
   }
   &__price {
